Thu Nov 13 01:51:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/config/cuts_db_sqlite3.mpb:

          . Missing base project.

Thu Nov 13 01:41:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/db/DB.mpc:
        * cuts/utils/db/DB_Connection.h:
        * cuts/utils/db/DB_Connection.inl:
        * cuts/utils/db/DB_Connection.cpp:
        * cuts/utils/db/DB_Exception.h:
        * cuts/utils/db/DB_Parameter.h:
        * cuts/utils/db/DB_Parameter.cpp:
        * cuts/utils/db/DB_Parameter_List.h:
        * cuts/utils/db/DB_Parameter_List.inl:
        * cuts/utils/db/DB_Parameter_List.cpp:
        * cuts/utils/db/DB_Query.h:
        * cuts/utils/db/ODBC/ODBC_Parameter.h:
        * cuts/utils/db/ODBC/ODBC_Parameter.cpp:
        * cuts/utils/db/ODBC/ODBC_Parameter_List.h:
        * cuts/utils/db/ODBC/ODBC_Parameter_List.inl:
        * cuts/utils/db/ODBC/ODBC_Parameter_List.cpp:
        * cuts/utils/db/ODBC/ODBC_Query.h:
        * cuts/utils/db/ODBC/ODBC_Query.inl:
        * cuts/utils/db/ODBC/ODBC_Query.cpp:
        * cuts/utils/db/SQLite/Connection.h:
        * cuts/utils/db/SQLite/Connection.cpp:
        * cuts/utils/db/SQLite/DB_SQLite.mpc:
        * cuts/utils/db/SQLite/Exception.h:
        * cuts/utils/db/SQLite/Exception.cpp:
        * cuts/utils/db/SQLite/Parameter.h:
        * cuts/utils/db/SQLite/Parameter.inl:
        * cuts/utils/db/SQLite/Parameter.cpp:
        * cuts/utils/db/SQLite/Parameter_List.h:
        * cuts/utils/db/SQLite/Parameter_List.inl:
        * cuts/utils/db/SQLite/Parameter_List.cpp:
        * cuts/utils/db/SQLite/Query.h:
        * cuts/utils/db/SQLite/Query.cpp:
        * cuts/utils/db/SQLite/Record.h:
        * cuts/utils/db/SQLite/Record.inl:
        * cuts/utils/db/SQLite/Record.cpp:
        * cuts/utils/db/SQLite/Types.h:
        * cuts/utils/db/SQLite/Types.inl:
        * cuts/utils/db/SQLite/Types.cpp:

          . Re-architectured the parameter portion of the database framework.