@@ -1,3 +1,9 @@
+Thu Nov 13 02:01:56 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/testing/Test_Database.cpp:
+
+          . Changed 'cuts_test_schedule' table name to 'cuts_test_interval'.
+
 Thu Nov 13 01:51:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/config/cuts_db_sqlite3.mpb:
